chore: refactor AwardedCourse to CourseAssignment, and its group to groups